--- a/SupportVectorMachine.ipynb
+++ b/SupportVectorMachine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMhznmx7srVcfU0z4Xvvj3",
+      "authorship_tag": "ABX9TyMsgzcv3FVXVUEaFyqRN8p5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "MhUVvwoPnqmG"
       },
-      "execution_count": 111,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
     {
       "cell_type": "code",
       "source": [
-        "kernel = 'linear'\n",
+        "kernel = 'poly'\n",
         "g, c = for_kernel_gc(kernel)\n",
         "\n",
         "clf = svm.SVC(kernel=kernel, gamma=g, C=c)\n",
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SCTFEqU4lzUR",
-        "outputId": "7ffd52a4-86b7-484b-f4fc-95cc3d86f6aa"
+        "outputId": "c39256d4-a027-4b78-9673-a3a8ae4520af"
       },
-      "execution_count": 100,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
